@@ -1,3 +1,15 @@
+2013-08-06  Zan Dobersek  <zdobersek@igalia.com>
+
+        webkit-gtk fails to build with bison-3.0
+        https://bugs.webkit.org/show_bug.cgi?id=119373
+
+        Reviewed by Gustavo Noronha Silva.
+
+        * GNUmakefile.am: Stop relying on generated glslang_tab.(cpp|h) and glslang.cpp sources as Bison 3.0
+        produces non-compilable source code. Instead, compile these pregenerated files as they're included in
+        the tree. Originally, the ANGLE source tree provides these files as generated by Bison 2.7, but they're
+        at the moment regenerated with Bison 2.3 when the third-party ANGLE source is being updated.
+
 2013-08-05  Alex Christensen  <achristensen@apple.com>
 
         Added optimizations to Windows ANGLE builds.
